29/35 test cases